--- a/interface/material_stat.ui
+++ b/interface/material_stat.ui
@@ -317,7 +317,7 @@ border-color: rgba(255, 255, 255, 0);
                   <widget class="QFrame" name="search_frame_3">
                    <layout class="QHBoxLayout" name="horizontalLayout_4">
                     <item>
-                     <widget class="QLineEdit" name="lineEdit_5">
+                     <widget class="QLineEdit" name="ref_search_box_3">
                       <property name="sizePolicy">
                        <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
                         <horstretch>0</horstretch>
@@ -552,7 +552,7 @@ border-color: rgba(255, 255, 255, 0);
                   <widget class="QFrame" name="search_frame_1">
                    <layout class="QHBoxLayout" name="horizontalLayout">
                     <item>
-                     <widget class="QLineEdit" name="lineEdit">
+                     <widget class="QLineEdit" name="ref_search_box_1">
                       <property name="sizePolicy">
                        <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
                         <horstretch>0</horstretch>
@@ -787,7 +787,7 @@ border-color: rgba(255, 255, 255, 0);
                   <widget class="QFrame" name="search_frame_4">
                    <layout class="QHBoxLayout" name="horizontalLayout_6">
                     <item>
-                     <widget class="QLineEdit" name="lineEdit_6">
+                     <widget class="QLineEdit" name="ref_search_box_4">
                       <property name="sizePolicy">
                        <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
                         <horstretch>0</horstretch>
@@ -1022,7 +1022,7 @@ border-color: rgba(255, 255, 255, 0);
                   <widget class="QFrame" name="search_frame_2">
                    <layout class="QHBoxLayout" name="horizontalLayout_3">
                     <item>
-                     <widget class="QLineEdit" name="lineEdit_4">
+                     <widget class="QLineEdit" name="ref_search_box_2">
                       <property name="sizePolicy">
                        <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
                         <horstretch>0</horstretch>
